[gd_scene load_steps=9 format=3 uid="uid://dt7xsqycj10ch"]

[ext_resource type="Texture2D" uid="uid://ddkavm7iy5s1b" path="res://textures/MenuElements/title_screen_pixels.png" id="1_gp6dr"]
[ext_resource type="Script" path="res://ui/title_screen.gd" id="1_laxpk"]
[ext_resource type="Texture2D" uid="uid://oofylhib1tb3" path="res://pixel_sprites/ui/title_card.png" id="2_h0yoq"]
[ext_resource type="Texture2D" uid="uid://clj18b720ecrn" path="res://pixel_sprites/ui/play_button.png" id="3_eguou"]
[ext_resource type="Texture2D" uid="uid://bokdm0np3mxg3" path="res://pixel_sprites/ui/quit_button.png" id="4_ptqme"]
[ext_resource type="Texture2D" uid="uid://dfq0xw45i74rm" path="res://pixel_sprites/ui/settings.png" id="5_gfgt0"]
[ext_resource type="AudioStream" uid="uid://b4ixvng4ud1lo" path="res://audio/title_screen_music.mp3" id="7_4f8f2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ntesa"]

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_laxpk")

[node name="TitleScreenPixels" type="Sprite2D" parent="."]
position = Vector2(579.5, 327)
scale = Vector2(0.651228, 0.650391)
texture = ExtResource("1_gp6dr")

[node name="TitleCard" type="Sprite2D" parent="."]
position = Vector2(576, 75)
scale = Vector2(2.41406, 2.20312)
texture = ExtResource("2_h0yoq")

[node name="PlayButton" type="MenuButton" parent="."]
offset_left = 67.0
offset_top = 255.0
offset_right = 230.0
offset_bottom = 321.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_ntesa")
icon = ExtResource("3_eguou")
expand_icon = true
item_count = 2
popup/item_0/text = "House"
popup/item_0/id = 0
popup/item_1/text = "Jail"
popup/item_1/id = 1

[node name="SettingsButton" type="Button" parent="."]
offset_left = 72.0
offset_top = 331.0
offset_right = 357.0
offset_bottom = 401.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_ntesa")
icon = ExtResource("5_gfgt0")
expand_icon = true

[node name="QuitButton" type="Button" parent="."]
offset_left = 70.0
offset_top = 418.0
offset_right = 217.0
offset_bottom = 484.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_ntesa")
icon = ExtResource("4_ptqme")
expand_icon = true

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_4f8f2")
volume_db = 10.23

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
